Bug 296814 - file.show does not do anything in cantor/R
Summary: file.show does not do anything in cantor/R
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: r-backend (other bugs)
Version First Reported In: 0.3
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: Alexander Rieder
URL: file:///usr/lib64/R/library/datasets/...
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-26 13:20 UTC by Christopher Yeleighton
Modified: 2018-06-04 21:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.04.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christopher Yeleighton 2012-03-26 13:20:51 UTC
User-Agent:       Mozilla/5.0 (X11; Linux x86_64; rv:10.0.2) Gecko/20100101 Firefox/10.0.2
Build Identifier: 

Most GUI systems will use a separate pager window for each file,
and let the user leave it up while R continues running. The
selection of such pagers could either be done using special pager
names being intercepted by lower-level code (such as ‘"internal"’
and ‘"console"’ on Windows), or by letting ‘pager’ be an R
function which will be called with the same first four arguments
as ‘file.show’ and take care of interfacing to the GUI.

Cantor does nothing.

Reproducible: Always

Steps to Reproduce:
  1.
filepath <- system.file("data", "morley.tab" , package="datasets"

  2.
file.show(filepath)
3.
Actual Results:  
  1.
[1] "/usr/lib64/R/library/datasets/data/morley.tab"

  2.
[1]

Expected Results:  
  2.
    Expt  Run  Speed
001    1    1    850
002    1    2    740
003    1    3    900
…
Comment 1 Nikita Sirgienko 2018-06-04 21:07:48 UTC
Git commit 15bdb4aabb867363af343157ca406617cf0f044f by Nikita Sirgienko.
Committed on 04/06/2018 at 21:06.
Pushed by sirgienko into branch 'master'.

In R backend try to open files with unknown mimetype in Cantor script editor and add handling for command without results in rserver
FIXED-IN: 18.04.2
Differential Revision: https://phabricator.kde.org/D13341

M  +10   -3    src/backends/R/rexpression.cpp
M  +3    -1    src/backends/R/rserver/rserver.cpp

https://commits.kde.org/cantor/15bdb4aabb867363af343157ca406617cf0f044f
Comment 2 Nikita Sirgienko 2018-06-04 21:08:15 UTC
Git commit 3a57d5c04c20c4cb69a94559d18a311b92a16c0b by Nikita Sirgienko.
Committed on 04/06/2018 at 21:07.
Pushed by sirgienko into branch 'Applications/18.04'.

In R backend try to open files with unknown mimetype in Cantor script editor and add handling for command without results in rserver
FIXED-IN: 18.04.2
Differential Revision: https://phabricator.kde.org/D13341

M  +10   -3    src/backends/R/rexpression.cpp
M  +3    -1    src/backends/R/rserver/rserver.cpp

https://commits.kde.org/cantor/3a57d5c04c20c4cb69a94559d18a311b92a16c0b