In R backend try to open files with unknown mimetype in Cantor script editor and add handling for command without results in rserver

BUG: 296814
FIXED-IN: 18.04.2
Differential Revision: https://phabricator.kde.org/D13341